--- a/07 - Array Cardio Day 2/index.html
+++ b/07 - Array Cardio Day 2/index.html
@@ -27,14 +27,25 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
+    const now = new Date().getFullYear();
+    
+    const atLeastOneNineteen = people.some(person => now - person.year >= 19);
+    console.log(atLeastOneNineteen);
+
+    const allNineteen = people.every(person => now - person.year >= 19);
+    console.log(allNineteen);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const comment = comments.find(comment => comment.id === 823423);
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const newComments = comments.filter(comment => comment !== comments[comments.findIndex(comment => comment.id === 823423)]);
+    console.log(newComments);
 
   </script>
 </body>
