--- a/09 - Dev Tools Domination/index.html
+++ b/09 - Dev Tools Domination/index.html
@@ -9,6 +9,7 @@
   <p onClick="makeGreen()">×BREAK×DOWN×</p>
 
   <script>
+    
     const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
 
     function makeGreen() {
@@ -21,24 +22,25 @@
     console.log('hello');
 
     // Interpolated
-    console.log('Hello I am a %s string!', '💩');
+    const hey = 'hi';
+    console.log('hi %s', 'pete');
 
     // Styled
-    // console.log('%c I am some great text', 'font-size:50px; background:red; text-shadow: 10px 10px 0 blue')
+    console.log('%c hi pete', 'font-size: 20px; background-color: red;')
 
     // warning!
-    console.warn('OH NOOO');
+    console.warn('warning!');
 
     // Error :|
-    console.error('Shit!');
+    console.error('FUG');
 
     // Info
-    console.info('Crocodiles eat 3-4 people per year');
+    console.info('An interesting fact.');
 
     // Testing
     const p = document.querySelector('p');
 
-    console.assert(p.classList.contains('ouch'), 'That is wrong!');
+    console.assert(p.classList.contains('ow'), 'That is wrong!');
 
     // clearing
     console.clear();
@@ -47,41 +49,26 @@
     console.log(p);
     console.dir(p);
 
-    console.clear();
-
     // Grouping together
     dogs.forEach(dog => {
       console.groupCollapsed(`${dog.name}`);
       console.log(`This is ${dog.name}`);
       console.log(`${dog.name} is ${dog.age} years old`);
-      console.log(`${dog.name} is ${dog.age * 7} dog years old`);
       console.groupEnd(`${dog.name}`);
-    });
-
+    })
+    
     // counting
-
-    console.count('Wes');
-    console.count('Wes');
-    console.count('Steve');
-    console.count('Steve');
-    console.count('Wes');
-    console.count('Steve');
-    console.count('Wes');
-    console.count('Steve');
-    console.count('Steve');
-    console.count('Steve');
-    console.count('Steve');
-    console.count('Steve');
+    console.count('lel');
+    console.count('lel');
+    console.count('lel');
+    console.count('lel');
 
     // timing
-    console.time('fetching data');
-    fetch('https://api.github.com/users/wesbos')
-      .then(data => data.json())
-      .then(data => {
-        console.timeEnd('fetching data');
-        console.log(data);
-      });
+    console.time('lelling');
+    console.log('lel');
+    console.timeEnd('lelling');
 
+    // table
     console.table(dogs);
 
   </script>
