--- a/14 - JavaScript References VS Copying/index.html
+++ b/14 - JavaScript References VS Copying/index.html
@@ -8,27 +8,27 @@
 
   <script>
     // start with strings, numbers and booleans
-    // let age = 100;
-    // let age2 = age;
-    // console.log(age, age2);
-    // age = 200;
-    // console.log(age, age2);
+    let age = 100;
+    let age2 = age;
+    console.log(age, age2);
+    age= 200;
+    console.log(age, age2);
 
-    // let name = 'Wes';
-    // let name2 = name;
-    // console.log(name, name2);
-    // name = 'wesley';
-    // console.log(name, name2);
+    let name = 'wes';
+    let name2 = name;
+    console.log(name, name2);
+    name = 'wesley';
+    console.log(name, name2);
 
     // Let's say we have an array
-    const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
+    let players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
+    console.log(typeof players);
 
     // and we want to make a copy of it.
-    const team = players;
-
-    console.log(players, team);
     // You might think we can just do something like this:
-    // team[3] = 'Lux';
+    const team = players;
+    players.pop();
+    console.log(players, team);
 
     // however what happens when we update that array?
 
@@ -39,19 +39,25 @@
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
     // So, how do we fix this? We take a copy instead!
-    const team2 = players.slice();
 
-    // one day
+    // one way
+    const team2 = players.slice();
+    players.push('Tim');
+    console.log(players, team2);
 
     // or create a new array and concat the old one in
     const team3 = [].concat(players);
+    players.pop();
+    console.log(players, team3);
 
     // or use the new ES6 Spread
     const team4 = [...players];
-    team4[3] = 'heeee hawww';
-    console.log(team4);
+    players.push('Bob');
+    console.log(players, team4);
 
     const team5 = Array.from(players);
+    players.pop();
+    console.log(players, team5);
 
     // now when we update it, the original one isn't changed
 
@@ -64,33 +70,36 @@
     };
 
     // and think we make a copy:
-    // const captain = person;
-    // captain.number = 99;
+    const captain = person;
+    captain.number = 99;
+    console.log(person, captain);
 
     // how do we take a copy instead?
-    const cap2 = Object.assign({}, person, { number: 99, age: 12 });
-    console.log(cap2);
+    const captain2 = Object.assign({}, person, { number: 50, age: 15 });
+    console.log(person, captain2);
 
     // We will hopefully soon see the object ...spread
-    // const cap3 = {...person};
+    // const captain3 = {...captain};
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
 
     const wes = {
       name: 'Wes',
-      age: 100,
       social: {
         twitter: '@wesbos',
-        facebook: 'wesbos.developer'
+        facebook: 'wesbos'
       }
-    };
-
-    console.clear();
-    console.log(wes);
+    }
 
     const dev = Object.assign({}, wes);
+    dev.name = 'Parse';
+    dev.social.twitter = '@coolman';
+    console.log(wes, dev);
 
     const dev2 = JSON.parse(JSON.stringify(wes));
+    dev2.name = 'Dilly';
+    dev2.social.twitter = '@dilly';
+    console.log(wes, dev2);
 
 
   </script>
