--- a/15 - LocalStorage/index.html
+++ b/15 - LocalStorage/index.html
@@ -23,12 +23,21 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
+    <div class="list-buttons">
+      <button type="button" name="selectAll">Select All</button>
+      <button type="button" name="unselectAll">Unselect All</button>
+      <button type="button" name="clearItems">Clear Items</button>
+    </div>
   </div>
 
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = JSON.parse(localStorage.getItem('items')) || [];
+  let items = JSON.parse(localStorage.getItem('items')) || [];
+
+  const selectButton = document.querySelector('button[name="selectAll"]');
+  const unselectButton = document.querySelector('button[name="unselectAll"]');
+  const clearButton = document.querySelector('button[name="clearItems"]');
 
   function addItem(e) {
     e.preventDefault();
@@ -36,8 +45,7 @@
     const item = {
       text,
       done: false
-    };
-
+    }
     items.push(item);
     populateList(items, itemsList);
     localStorage.setItem('items', JSON.stringify(items));
@@ -56,19 +64,39 @@
   }
 
   function toggleDone(e) {
-    if (!e.target.matches('input')) return; // skip this unless it's an input
+    if (!e.target.matches('input')) return; // skip this unless input clicked
     const el = e.target;
     const index = el.dataset.index;
     items[index].done = !items[index].done;
     localStorage.setItem('items', JSON.stringify(items));
     populateList(items, itemsList);
   }
+  
+  function selectAll(e) {
+    items.forEach(item => item.done = true);
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  function unselectAll(e) {
+    items.forEach(item => item.done = false);
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  function clearItems(e) {
+    items = [];
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
 
   addItems.addEventListener('submit', addItem);
   itemsList.addEventListener('click', toggleDone);
+  selectButton.addEventListener('click', selectAll);
+  unselectButton.addEventListener('click', unselectAll);
+  clearButton.addEventListener('click', clearItems);
 
   populateList(items, itemsList);
-
 </script>
 
 
