--- a/25 - Event Capture, Propagation, Bubbling and Once/index.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index.html
@@ -44,8 +44,7 @@
 
   function logText(e) {
     console.log(this.classList.value);
-    // e.stopPropagation(); // stop bubbling!
-    // console.log(this);
+    // e.stopPropagation();
   }
 
   divs.forEach(div => div.addEventListener('click', logText, {
@@ -54,11 +53,10 @@
   }));
 
   button.addEventListener('click', () => {
-    console.log('Click!!!');
+    console.log('Click!!');
   }, {
     once: true
   });
-
 </script>
 </body>
 </html>
