--- a/27 - Click and Drag/index.html
+++ b/27 - Click and Drag/index.html
@@ -48,22 +48,25 @@
   });
 
   slider.addEventListener('mouseleave', () => {
-    isDown = false;
+    isDown = false;  
     slider.classList.remove('active');
+      
   });
 
   slider.addEventListener('mouseup', () => {
-    isDown = false;
-    slider.classList.remove('active');
+    isDown = false;        
+    slider.classList.remove('active');    
   });
 
   slider.addEventListener('mousemove', (e) => {
-    if (!isDown) return;  // stop the fn from running
+    if (!isDown) return;
     e.preventDefault();
     const x = e.pageX - slider.offsetLeft;
     const walk = (x - startX) * 3;
     slider.scrollLeft = scrollLeft - walk;
   });
+
+
 
 </script>
 
